--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="https://lh3.googleusercontent.com/proxy/ym257gZcPaUVQEsjXbe2C91vmWKRs0G7gJRAeu8O8WJTZ02o9lYWWY0nja9cjKW9cTL-yZLqpKGyDlwi5Us7CkOgq1Tt1kHF7lNtO6-Cu2jaCyi3HCU" />
+    <link rel="icon" href="./icono.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
